letter and line spacing fix to port page and btn color fix

--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@ section {
 }
 
 .btn {
-  background-color: rgba(66, 65, 65, 0.336);
+  background-color: #7e7d7d;
   border-radius: 4px;
   border: 0;
   color: #ffffff !important;
@@ -250,9 +250,11 @@ a:hover {
 .project_link a {
   padding: 2px;
   color: rgb(255, 255, 255);
-  font-weight: 800;
+  font-weight: 400;
   display: flex;
   justify-content: center;
+  line-height: 1.6;
+  letter-spacing: 2px;
   
 
   
